Change Module multiply

--- a/latex/md_README.tex
+++ b/latex/md_README.tex
@@ -1,1 +1,3 @@
-Projects developed for A\-Dy\-C\-S Build version 1.\-9.\-1 
+Projects developed for A\-Dy\-C\-S Build version 1.\-9.\-1
+
+Including Documentation 
